tests/errors/math_domain_sqrt.ki
discard import("math").sqrt(-1)
